Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
@@ -145,7 +145,7 @@
 						</p:inputMask>
 					</div>
 
-					<div class="Container32 Fright-FAAddress CustomWidthFA-Responsive">
+					<div class="Container32 CustomWidthFA-Responsive">
 						<label Class="Container100"
 							style="text-align: left !important; font-weight: bold !important;">Social
 							Security Number</label>
@@ -157,7 +157,7 @@
 						</p:inputMask>
 					</div>
 
-					<div class="Container32 Fright CustomWidthFA2 MarTop5">
+					<div class="Container32 CustomWidthFA2 MarTop5">
 						<label Class="Container100"
 							style="text-align: left !important; font-weight: bold !important;">Citizenship</label>
 
