--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -25,9 +25,9 @@
                              placeholder="Street Address 1"
                              required="false">
                 </p:inputText>
-                <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
+               <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                              placeholder="Street Address 2">
-                </p:inputText>
+                </p:inputText> -->
             </div>
 
             <div class="EmptyBox20"></div>
@@ -100,9 +100,9 @@
                                  value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressStreet}"
                                  placeholder="Street Address 1">
                     </p:inputText>
-                    <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
+                   <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                  placeholder="Street Address 2">
-                    </p:inputText>
+                    </p:inputText> -->
                 </div>
 
                 <div class="EmptyBox20"></div>
@@ -189,9 +189,9 @@
                              value="#{tdcto.tdMasterData.jointAcctOwnersDetail.physicalAddressStreet}"
                              placeholder="Street Address 1">
                 </p:inputText>
-                <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
+               <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                              placeholder="Street Address 2">
-                </p:inputText>
+                </p:inputText> -->
             </div>
             <div class="EmptyBox20"></div>
 
@@ -262,9 +262,9 @@
                                  value="#{tdcto.tdMasterData.jointAcctOwnersDetail.mailingAddressStreet}"
                                  placeholder="Street Address 1">
                     </p:inputText>
-                    <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
+                    <!-- <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                  placeholder="Street Address 2">
-                    </p:inputText>
+                    </p:inputText> -->
                 </div>
 
                 <div class="EmptyBox20"></div>
