Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
@@ -153,8 +153,12 @@
     <div class="Container100 TextAlCenter customRadioBlock">
 
         <h3 class="TexAlCenter StepsQuestionsFS">
-            Assuming you invest for at least #{tcmpb.horizon} years, in the course of any given year,
-            which of the below range of returns would be most acceptable to you?
+           <!-- Assuming you invest for at least #{tcmpb.horizon} years, in the course of any given year,
+            which of the below range of returns would be most acceptable to you?-->
+            Below is a simulation of
+            the possible performance ranges over time of 5 hypothetical
+            portfolios at differing levels of risk – comparing the 5 options,
+            which range of uncertainty best matches your comfort level?
         </h3>
         <div class="EmptyBox5"></div>
         <p:messages showDetail="false" sticky="true" escape="true" closable="true"/>
