--- a/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
@@ -14,7 +14,7 @@
     <ui:define name="content">
 
         <!-- BOX START -->
-        <h:form id="ctoForm">
+        <h:form id="ctoForm" styleClass="formPage">
 
             <div class="layout-portlets-box" style="background: #FBFCFD;">
 
