--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -138,7 +138,7 @@
                                        style="text-align: left !important; font-weight: bold !important;">State</label>
 
                                 <div class="EmptyBox5"></div>
-                                <p:selectOneMenu value="" styleClass="FundAccountDropdownUI"
+                                <p:selectOneMenu value="" styleClass="FundAccountDropdownUI formpageDropdown"
                                                  style="width: 100%;">
                                     <p:ajax/>
                                     <f:selectItem itemLabel="Select State" itemValue=""
