--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -10,10 +10,11 @@
 <p:tab title="Primary Holder">
 
     <p:panel id="owneraddressPanel" style="border: 0px; background: transparent">
-        <div class="Container80 Responsive90 MarTop5 MarCenter"
+        <div class="Container80 Responsive100 MarTop5 MarCenter"
              style="margin-bottom: 15px;">
 
             <div class="Container100">
+
                 <label Class="Container60"
                        style="text-align: left !important; font-weight: bold !important;">
                     Residence Address
@@ -52,7 +53,7 @@
 
                     <div class="EmptyBox5"></div>
                     <p:selectOneMenu value="#{tdcto.tdMasterData.acctOwnersDetail.physicalAddressState}"
-                                     styleClass="CustomWidthFA-Responsive FundAccountDropdownUI"
+                                     styleClass="CustomWidthFA-Responsive FundAccountDropdownUI formpageDropdown"
                                      style="width: 100%;"
                                      required="false">
                         <p:ajax/>
@@ -124,7 +125,7 @@
 
                         <div class="EmptyBox5"></div>
                         <p:selectOneMenu value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressState}"
-                                         styleClass="CustomWidthFA-Responsive FundAccountDropdownUI"
+                                         styleClass="CustomWidthFA-Responsive FundAccountDropdownUI formpageDropdown"
                                          style="width: 100%;">
                             <p:ajax/>
                             <f:selectItem itemLabel="Select State" itemValue=""
@@ -216,7 +217,7 @@
 
                     <div class="EmptyBox5"></div>
                     <p:selectOneMenu value="#{tdcto.tdMasterData.jointAcctOwnersDetail.physicalAddressState}"
-                                     styleClass="CustomWidthFA-Responsive FundAccountDropdownUI"
+                                     styleClass="CustomWidthFA-Responsive FundAccountDropdownUI formpageDropdown"
                                      style="width: 100%;">
                         <p:ajax/>
                         <f:selectItem itemLabel="Select State" itemValue=""
@@ -285,7 +286,7 @@
 
                         <div class="EmptyBox5"></div>
                         <p:selectOneMenu value="#{tdcto.tdMasterData.jointAcctOwnersDetail.mailingAddressState}"
-                                         styleClass="CustomWidthFA-Responsive FundAccountDropdownUI"
+                                         styleClass="CustomWidthFA-Responsive FundAccountDropdownUI formpageDropdown"
                                          style="width: 100%;">
                             <p:ajax/>
                             <f:selectItem itemLabel="Select State" itemValue=""
